--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@
 ################################################################################
 
 /.vs
+*.cache
+*.dll
+*.exe
+*.pdb
+/build/
+*.suo
+*.user
+_ReSharper.*/
+*.sdf
+*.opensdf
+*.tlog
+*.log
+TestResult.xml
+*.VisualState.xml
+Version.cs
+Version.h
+Version.cpp
